# affinity

./: .gitignore  README.md  affinity.py  pyproject.toml  test_affinity.py
.github/workflows/: publish_pypi.yml  pypi_publish.yml  release.yml
