[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "affinity"
version = "0.8.5"
description = "Module for creating well-documented datasets, with types and annotations."
authors = [
    { name = "Alex Kislukhin" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "duckdb>=1",
    "pandas",
]

[dependency-groups]
dev = [
    "polars>=1",
    "pyarrow>=17",
    "pytest>=8",
]

[tool.hatch.build]
include = [
    "affinity.py",
]

[tool.ruff]
line-length = 88
