[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "affinity"
version = "1.1.0"
description = "Module for creating well-documented datasets, with types and annotations."
authors = [
    { name = "Alex Kislukhin" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "duckdb>=1.3",
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "polars>=1",
    "pyarrow>=17",
    "pytest>=8",
]
aws = [
    "awswrangler>=3.10.1",
]

[tool.hatch.build]
include = [
    "affinity.py",
]

[tool.ruff]
line-length = 88
